--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ pdf.temp-directory=${java.io.tmpdir}/sarabun_pdf_files
 # Swagger
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
+
+# Actuator (Health Check)
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when_authorized
+management.health.defaults.enabled=true
