--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
 			<version>1.18.3</version>
 		</dependency>
 		
+		<!-- Spring Actuator สำหรับ Health Check -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
 		<!-- Dev Tools -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
