--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,40 @@ springdoc.api-docs.path=/api-docs
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when_authorized
 management.health.defaults.enabled=true
+
+# ============================================
+# Rate Limiting Configuration
+# ============================================
+# เปิด/ปิด Rate Limiting (default: true)
+ratelimit.enabled=true
+
+# Global limit: จำนวน requests ทั้งระบบต่อนาที
+ratelimit.global.requests-per-minute=100
+
+# Per-IP limit: จำนวน requests ต่อ IP ต่อนาที
+ratelimit.per-ip.requests-per-minute=10
+
+# Burst capacity: จำนวน requests สูงสุดที่ IP สามารถส่งรัวๆ ได้
+# ⚠️ ค่านี้สำคัญ! ถ้าต้องการให้ติดเร็ว ตั้งค่าต่ำ (เช่น 5)
+ratelimit.per-ip.burst-capacity=5
+
+# ============================================
+# Input Validation Configuration
+# ============================================
+# เปิด/ปิด Validation (default: true)
+validation.enabled=true
+
+# ขนาดสูงสุดของ content (ตัวอักษร) - default: 500,000 chars (~500KB)
+validation.max-content-length=500000
+
+# ขนาดสูงสุดของ Base64 signature (bytes) - default: 10MB
+validation.max-base64-size=10485760
+
+# จำนวนผู้ลงนามสูงสุด
+validation.max-signers=20
+
+# จำนวนผู้รับสูงสุด
+validation.max-recipients=100
+
+# จำนวน attachments สูงสุด
+validation.max-attachments=50
